# chat-ops

./: .gitignore  CLAUDE.md  DEVELOPMENT_ROADMAP.md  IMPLEMENTATION_PLAN.md  README.md
services/ai-orchestrator/: .env.example  Dockerfile  README.md  TEST_GUIDE.md  pyproject.toml
services/ai-orchestrator/.claude/agents/: file-explorer.md  project-doc-writer.md  test-executor-analyzer.md
services/ai-orchestrator/app/: __init__.py  main.py
services/ai-orchestrator/app/constants/: __init__.py  reference_patterns.py  render_keywords.py
services/ai-orchestrator/app/models/: __init__.py  document.py  log_settings.py  query-plan.py  query-result.py  query_plan.py  rating.py  render_spec.py  settings.py  validation.py
services/ai-orchestrator/docs/: AI_ORCHESTRATOR_FLOW_EXAMPLE.md
services/ai-orchestrator/tests/: __init__.py  conftest.py  test_aggregation_context.py  test_classify_intent_sql_context.py  test_composite_followup.py  test_default_render_type_scenarios.py  test_documents_api.py  test_e2e_scenarios.py  test_file_parser.py  test_filter_local.py  test_implicit_reference.py  test_insight_generation.py  test_knowledge_answer.py  test_log_analysis_service.py  test_main.py  test_prepare_count_sql.py  test_quality_answer_service.py  test_query_plan_validator.py  test_query_planner.py  test_rag_service.py  test_render_composer.py  test_settings_service.py  test_sql_render_composer.py  test_sql_validator.py  test_summarize_sql.py  test_text_to_sql_chart_type.py  test_text_to_sql_complex_patterns.py  test_text_to_sql_direct_answer.py  test_where_condition_merge.py
(+311 files in other folders)
